llmService模块开发